--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,19 @@ nav {
 }
 
 #blur {
-	background-image: url("../media/background.jpg");
-	width: 720px;
-	height: 425px;
+	background-image: url("../media/background.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: fill;
+
+	/*width: 720px;
+	height: 425px;*/
+	width: 100%;
+	height: 500px;
 	padding-right: auto;
 	padding-left: auto;
 	/*border-radius: 50%;*/
-	box-shadow: 0 0 15px 25px white inset;
+	box-shadow: 0 0 50px 75px white inset;
 }
 
 .nav-item {
@@ -126,6 +132,15 @@ body {
 	padding-right: auto;
 	padding-left: auto;
 
+}
+
+.container {
+	width: 60%;
+}
+
+.form-control {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 footer {
