--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,12 @@ nav {
 
 	/*width: 720px;
 	height: 425px;*/
-	width: 100%;
+	width: 85%;
 	height: 400px;
 	padding-right: auto;
 	padding-left: auto;
+	margin-left: auto;
+	margin-right: auto;
 	/*border-radius: 50%;*/
 	box-shadow: 0 0 50px 75px white inset;
 }
